--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "5.3.0",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
+    "redux-actions": "^2.6.5",
     "redux-thunk": "^2.4.1",
     "styled-component": "^2.8.0",
     "styled-components": "^5.3.3",
