--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/is-prop-valid": "^1.1.1",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.4.1",
@@ -13,6 +14,8 @@
     "connected-react-router": "^6.9.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.27.0",
+    "react-redux": "^7.2.6",
     "react-router-dom": "5.3.0",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
