--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.26.0",
     "connected-react-router": "^6.9.2",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.27.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "5.3.0",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
+    "redux-actions": "^2.6.5",
     "redux-thunk": "^2.4.1",
     "styled-component": "^2.8.0",
     "styled-components": "^5.3.3",
